--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Assalomu alaykum</title>
 </head>
 <body>
-<h1>Assalomu alaykum hayrli Juma</h1>
+<h1>Assalomu alayk Juma</h1>
 </body>
 </html>
